objects/HotDocs_Request__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>HotDocs Requests</relationshipLabel>
        <relationshipName>HotDocs_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <inlineHelpText>Salesforce Job Queue Id</inlineHelpText>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attempt__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Agreement</label>
        <referenceTo>Supporting_Agreement__c</referenceTo>
        <relationshipLabel>HotDocs Requests</relationshipLabel>
        <relationshipName>HotDocs_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Item_ID__c</fullName>
        <label>Work Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HotDocs Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_ID__c</columns>
        <columns>Work_Item_ID__c</columns>
        <columns>Agreement__c</columns>
        <columns>Status__c</columns>
        <columns>Attempts__c</columns>
        <columns>Last_Attempt__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HR-{0}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HotDocs Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>